--- a/src/app/pages/pr/beneficiaire-pr/beneficiaire-pr.page.html
+++ b/src/app/pages/pr/beneficiaire-pr/beneficiaire-pr.page.html
@@ -263,7 +263,7 @@
                     <button mat-flat-button class="btn-info btn-dimension" (click)="onEdit({data: row, index_: i})">Editer</button>
                   </div>
                   <div class="child-column-flex">
-                    <button mat-flat-button class="btn-info btn-dimension" (click)="onAddShowPR({data: row, index_: i})">Aff_</button>
+                    <button mat-flat-button class="btn-info btn-dimension" (click)="onAddShowPR({data: row, index_: i})">Afficher</button>
                   </div>
                 </div>
               </span>
