--- a/src/app/pages/beneficiaire/beneficiaire.page.scss
+++ b/src/app/pages/beneficiaire/beneficiaire.page.scss
@@ -5,14 +5,11 @@
 }
 
 .container-matTab {
-  /**width: 100%;
-  overflow: auto;*/
   position: relative;
-}  
+  width: 100%;
+} 
 .table-container {
   position: relative;
-  min-height: 200px;
-  max-height: 400px;
   overflow: auto;
 }
 
@@ -24,7 +21,24 @@ tr.example-element-row:active {
 }
 
 table {
-  width: 90%;
+  width: 100%;
+}
+tr.mat-header-row {
+  height: 30px;
+  background-color: rgb(116 177 198);;
+}
+th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
+  padding-left: 2px;
+}
+th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type {
+  padding-right: 0px;
+}
+tr.mat-row, tr.mat-footer-row {
+  height: 25px;
+}
+th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
+  border-right-width: 0.4px;
+  border-right-style: inset;
 }
 
 td.mat-column-star {
@@ -50,4 +64,46 @@ th.mat-column-position, td.mat-column-position {
 
 .demo-button + .demo-button {
   margin-left: 8px;
+}
+/**Expanded Row*/
+.sv-element-detail td {
+  border-bottom-width: 0;
+}
+  
+.sv-element-detail {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e5f1e1;
+  box-shadow: inset 1px 2px 5px #87b3cc;
+  border-radius: 2px;
+}
+.sv-element-detail-vide {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fddbcc !important;
+  border-radius: 2px;
+}
+tr.detail-row {
+  height: 0!important;
+}
+tr.sv-element-row:not(.sv-expanded-row):hover {
+  background: rgb(236, 235, 132);
+}
+  
+tr.sv-element-row:not(.sv-expanded-row):active {
+  background: #e4b5ff !important;
+}
+.btn-info {
+  color: white;
+  background-color: #0d3c68;
+  padding: 0px;
+}
+// Button
+.btn-dimension {
+  height: 23px!important;
+  line-height: 23px!important;
 }
