--- a/src/app/pages/pr/animation-ve/animation-ve.page.html
+++ b/src/app/pages/pr/animation-ve/animation-ve.page.html
@@ -644,7 +644,7 @@
               <th mat-header-cell *matHeaderCellDef> 
                 <span>
                   <a (click)="onCancelAnime()">annuler</a>
-                  <a (click)="onSaveAnime('animation')">Done</a>
+                  <a (click)="onSaveAnime('ve')">Done</a>
                 </span>
               </th>
             </ng-container>
