--- a/src/app/pages/pr/suivi-pr/suivi-pr.page.html
+++ b/src/app/pages/pr/suivi-pr/suivi-pr.page.html
@@ -71,10 +71,10 @@
                         <!--Column Annee-->
                         <ng-container matColumnDef="annee">
                           <th mat-header-cell *matHeaderCellDef>Annee</th>
-                          <td mat-cell *matCellDef="let row">{{row.annee_du}}</td>
+                          <td mat-cell *matCellDef="let row">{{row.annee_du}}-{{row.annee_au}}-</td>
                         </ng-container>
                         <ng-container matColumnDef="new_annee">
-                          <th mat-header-cell *matHeaderCellDef>{{updated_Mep.annee}}</th>
+                          <th mat-header-cell *matHeaderCellDef>{{updated_Mep.annee != null?updated_Mep.annee.annee_du:null}}-{{updated_Mep.annee != null?updated_Mep.annee.annee_au:null}}</th>
                         </ng-container>
                         <!--Column Saison-->
                         <ng-container matColumnDef="saison">
@@ -456,10 +456,10 @@
                         <!--Annee-->
                         <ng-container matColumnDef="annee">
                           <th mat-header-cell *matHeaderCellDef>Annee</th>
-                          <td mat-cell *matCellDef="let row">{{row.annee_du}}</td>
+                          <td mat-cell *matCellDef="let row">{{row.annee_du}}-{{row.annee_au}}</td>
                         </ng-container>
                         <ng-container matColumnDef="new_annee">
-                          <th mat-header-cell *matHeaderCellDef>{{updated_Mep.annee}}</th>
+                          <th mat-header-cell *matHeaderCellDef>{{updated_Mep.annee != null?updated_Mep.annee.annee_du:null}}-{{updated_Mep.annee != null?updated_Mep.annee.annee_au:null}}</th>
                         </ng-container>
                         <!--Column Code parcelle-->
                         <ng-container matColumnDef="code_parce">
@@ -821,7 +821,7 @@
                         <!--Column Code MEP-->
                         <ng-container matColumnDef="code_mep">
                           <th mat-header-cell *matHeaderCellDef>code_MEP</th>
-                          <td mat-cell *matCellDef="let row">{{row.code_culture}}</td>
+                          <td mat-cell *matCellDef="let row">{{row.annee_du}}-{{row.annee_au}}</td>
                         </ng-container>
                         <ng-container matColumnDef="new_code_mep">
                           <th mat-header-cell *matHeaderCellDef></th>
@@ -832,7 +832,7 @@
                           <td mat-cell *matCellDef="let row">{{row.annee_du}}</td>
                         </ng-container>
                         <ng-container matColumnDef="new_annee">
-                          <th mat-header-cell *matHeaderCellDef>{{updated_Mep.annee}}</th>
+                          <th mat-header-cell *matHeaderCellDef>{{updated_Mep.annee != null?updated_Mep.annee.annee_du:null}}-{{updated_Mep.annee != null?updated_Mep.annee.annee_au:null}}</th>
                         </ng-container>
 
                         <!--Column Saison-->
